# local-voice-agent

./: .env  README.md  bot.py  prepare_models.py  pyproject.toml
.data/: conversation.json
services/: __init__.py  context_store.py  openclaw_tool.py  pocket_tts_service.py  qwen_stt.py
static/: index.html
